# pkgmanager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pkgmanager/: __init__.py  cli.py  managers.py  manifest.py  models.py  specs.yaml  utils.py
pkgmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_managers.py  test_manifest.py  test_parsing.py
