[project]
name = "pkgmanager"
version = "0.3.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6",
    "cyclopts>=3.20.0",
    "rich>=13.0.0",
]
description = "Unified package manager for conda, python (uv), and rust (cargo)"

[project.scripts]
pkgmanager = "pkgmanager.cli:main"

[tool.setuptools.package-data]
pkgmanager = ["specs.yaml"]
