[project]
name = "pkgmanager"
version = "0.6.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6",
    "cyclopts>=3.20.0",
    "rich>=13.0.0",
]
description = "Unified package manager for conda, python (uv), and rust (cargo)"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[project.scripts]
pkgmanager = "pkgmanager.cli:main"

[tool.setuptools.package-data]
pkgmanager = ["specs.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
